<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/my_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Which_question"
        android:textAlignment="center"
        android:textSize="24sp" />


    <ImageView
        android:id="@+id/disney_image"
        android:layout_width="358dp"
        android:layout_height="344dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/disney_logo"
        android:src="@drawable/disney"
        tools:src="@drawable/Aurorapink"
        />


    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll_label" />
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset_label" />
    <TextView
        android:id="@+id/my_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/click_roll_to_start_click_result_to_go_to_the_default"
        android:textAlignment="center"
        android:textSize="12sp" />

</LinearLayout>